--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cloud_firestore: ^2.4.0
   firebase_storage: ^10.0.1
   charts_flutter: ^0.12.0
+  url_launcher: ^6.1.2
 
 dev_dependencies:
   flutter_test:
